[gd_scene load_steps=16 format=3 uid="uid://irwajo62sbjc"]

[ext_resource type="Script" path="res://main.gd" id="1"]
[ext_resource type="Script" path="res://camera.gd" id="2"]
[ext_resource type="Material" path="res://target_material.tres" id="3"]

[sub_resource type="Environment" id="1"]
background_mode = 1
background_color = Color(0.270588, 0.270588, 0.270588, 1)
ambient_light_color = Color(0.273438, 0.273438, 0.273438, 1)

[sub_resource type="PlaneMesh" id="2"]
size = Vector2(200, 200)
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vkw1"]
albedo_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(0, 0, 1, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="4"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(1, 1, 0, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="6"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="7"]
albedo_color = Color(1, 0, 0, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="8"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="9"]
cull_mode = 2
shading_mode = 0
diffuse_mode = 1
specular_mode = 3
albedo_color = Color(1, 0, 0, 1)
point_size = 5.0

[sub_resource type="StandardMaterial3D" id="10"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)
point_size = 5.0

[sub_resource type="ImmediateMesh" id="ImmediateMesh_dt5in"]

[node name="Node" type="Node"]
script = ExtResource("1")

[node name="Enviroment" type="Node" parent="."]

[node name="Camera3D" type="Camera3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, 0.811898, 0.583799, 0, -0.583799, 0.811898, 0, 2.95313, 3.96527)
environment = SubResource("1")
current = true
fov = 60.0
near = 2.0
script = ExtResource("2")

[node name="OmniLight3D" type="OmniLight3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.254496, 8.47926, 4.25873)
omni_range = 50.0

[node name="floor" type="MeshInstance3D" parent="Enviroment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9, 0)
mesh = SubResource("2")
surface_material_override/0 = SubResource("StandardMaterial3D_3vkw1")

[node name="Ray" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)
material_override = SubResource("3")
mesh = SubResource("4")

[node name="Source" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.19, 0, 9)
material_override = SubResource("5")
mesh = SubResource("6")

[node name="Hit" type="MeshInstance3D" parent="."]
material_override = SubResource("7")
mesh = SubResource("8")

[node name="Ray_geometry" type="ImmediateMesh" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
material_override = SubResource("9")
script = null

[node name="Target_geometry" type="ImmediateMesh" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
transform = Transform3D(-0.910107, 0, 0.420151, 0, 1, 0, -0.420151, 0, -0.910107, 0, 0, 0)
material_override = ExtResource("3")
script = null

[node name="Target_wireframe" type="ImmediateMesh" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
transform = Transform3D(-0.910097, 0, 0.420147, 0, 1, 0, -0.420147, 0, -0.910097, 0, 0, 0)
material_override = SubResource("10")
cast_shadow = 0
script = null

[node name="Target_geo" type="MeshInstance3D" parent="."]
mesh = SubResource("ImmediateMesh_dt5in")

[node name="Target_wire" type="MeshInstance3D" parent="."]
mesh = SubResource("ImmediateMesh_dt5in")

[node name="Ray_geo" type="MeshInstance3D" parent="."]
mesh = SubResource("ImmediateMesh_dt5in")
